@@ -23,8 +23,6 @@ import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.message.ShareFetchResponseData;
 import org.apache.kafka.common.message.ShareFetchResponseData.PartitionData;
 import org.apache.kafka.common.protocol.Errors;
-import org.apache.kafka.common.requests.ShareFetchRequest;
-import org.apache.kafka.common.requests.ShareFetchRequest.SharePartitionData;
 import org.apache.kafka.common.requests.ShareFetchResponse;
 import org.apache.kafka.common.requests.ShareRequestMetadata;
 import org.apache.kafka.server.share.CachedSharePartition;
@@ -34,10 +32,12 @@ import org.apache.kafka.server.share.session.ShareSession;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.NoSuchElementException;
@@ -51,7 +51,7 @@ public class ShareSessionContext extends ShareFetchContext {
 
     private final ShareRequestMetadata reqMetadata;
     private final boolean isSubsequent;
-    private Map<TopicIdPartition, SharePartitionData> shareFetchData;
+    private List<TopicIdPartition> shareFetchData;
     private ShareSession session;
 
     /**
@@ -61,7 +61,7 @@ public class ShareSessionContext extends ShareFetchContext {
      * @param shareFetchData     The share partition data from the share fetch request.
      */
     public ShareSessionContext(ShareRequestMetadata reqMetadata,
-                               Map<TopicIdPartition, ShareFetchRequest.SharePartitionData> shareFetchData) {
+                               List<TopicIdPartition> shareFetchData) {
         this.reqMetadata = reqMetadata;
         this.shareFetchData = shareFetchData;
         this.isSubsequent = false;
@@ -80,7 +80,7 @@ public class ShareSessionContext extends ShareFetchContext {
     }
 
     // Visible for testing
-    public Map<TopicIdPartition, ShareFetchRequest.SharePartitionData> shareFetchData() {
+    public List<TopicIdPartition> shareFetchData() {
         return shareFetchData;
     }
 
@@ -103,7 +103,7 @@ public class ShareSessionContext extends ShareFetchContext {
     public ShareFetchResponse throttleResponse(int throttleTimeMs) {
         if (!isSubsequent) {
             return new ShareFetchResponse(ShareFetchResponse.toMessage(Errors.NONE, throttleTimeMs,
-                    Collections.emptyIterator(), Collections.emptyList()));
+                    Collections.emptyIterator(), List.of()));
         }
         int expectedEpoch = ShareRequestMetadata.nextEpoch(reqMetadata.epoch());
         int sessionEpoch;
@@ -114,10 +114,10 @@ public class ShareSessionContext extends ShareFetchContext {
             log.debug("Subsequent share session {} expected epoch {}, but got {}. " +
                     "Possible duplicate request.", session.key(), expectedEpoch, sessionEpoch);
             return new ShareFetchResponse(ShareFetchResponse.toMessage(Errors.INVALID_SHARE_SESSION_EPOCH,
-                    throttleTimeMs, Collections.emptyIterator(), Collections.emptyList()));
+                    throttleTimeMs, Collections.emptyIterator(), List.of()));
         }
         return new ShareFetchResponse(ShareFetchResponse.toMessage(Errors.NONE, throttleTimeMs,
-                Collections.emptyIterator(), Collections.emptyList()));
+                Collections.emptyIterator(), List.of()));
     }
 
     /**
@@ -196,7 +196,7 @@ public class ShareSessionContext extends ShareFetchContext {
                                                      LinkedHashMap<TopicIdPartition, ShareFetchResponseData.PartitionData> updates) {
         if (!isSubsequent) {
             return new ShareFetchResponse(ShareFetchResponse.toMessage(
-                    Errors.NONE, 0, updates.entrySet().iterator(), Collections.emptyList()));
+                    Errors.NONE, 0, updates.entrySet().iterator(), List.of()));
         } else {
             int expectedEpoch = ShareRequestMetadata.nextEpoch(reqMetadata.epoch());
             int sessionEpoch;
@@ -207,7 +207,7 @@ public class ShareSessionContext extends ShareFetchContext {
                 log.debug("Subsequent share session {} expected epoch {}, but got {}. Possible duplicate request.",
                         session.key(), expectedEpoch, sessionEpoch);
                 return new ShareFetchResponse(ShareFetchResponse.toMessage(Errors.INVALID_SHARE_SESSION_EPOCH,
-                        0, Collections.emptyIterator(), Collections.emptyList()));
+                        0, Collections.emptyIterator(), List.of()));
             }
             // Iterate over the update list using PartitionIterator. This will prune updates which don't need to be sent
             Iterator<Map.Entry<TopicIdPartition, ShareFetchResponseData.PartitionData>> partitionIterator = new PartitionIterator(
@@ -218,7 +218,7 @@ public class ShareSessionContext extends ShareFetchContext {
             log.debug("Subsequent share session context with session key {} returning {}", session.key(),
                     partitionsToLogString(updates.keySet()));
             return new ShareFetchResponse(ShareFetchResponse.toMessage(
-                    Errors.NONE, 0, updates.entrySet().iterator(), Collections.emptyList()));
+                    Errors.NONE, 0, updates.entrySet().iterator(), List.of()));
         }
     }
 
@@ -228,17 +228,16 @@ public class ShareSessionContext extends ShareFetchContext {
             return new ErroneousAndValidPartitionData(shareFetchData);
         }
         Map<TopicIdPartition, PartitionData> erroneous = new HashMap<>();
-        Map<TopicIdPartition, ShareFetchRequest.SharePartitionData> valid = new HashMap<>();
+        List<TopicIdPartition> valid = new ArrayList<>();
         // Take the session lock and iterate over all the cached partitions.
         synchronized (session) {
             session.partitionMap().forEach(cachedSharePartition -> {
                 TopicIdPartition topicIdPartition = new TopicIdPartition(cachedSharePartition.topicId(), new
                         TopicPartition(cachedSharePartition.topic(), cachedSharePartition.partition()));
-                ShareFetchRequest.SharePartitionData reqData = cachedSharePartition.reqData();
                 if (topicIdPartition.topic() == null) {
                     erroneous.put(topicIdPartition, ShareFetchResponse.partitionResponse(topicIdPartition, Errors.UNKNOWN_TOPIC_ID));
                 } else {
-                    valid.put(topicIdPartition, reqData);
+                    valid.add(topicIdPartition);
                 }
             });
             return new ErroneousAndValidPartitionData(erroneous, valid);
